# Neural-Network

./: CMakeLists.txt  main.cpp  mnist_loader.cpp  mnist_loader.h  run.sh
include/nn/: tensor.h
src/nn/: tensor.cpp
